--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "Reed Barger",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.4.4",
     "apollo-server": "^2.0.0-rc.7",
     "bcrypt": "^3.0.0",
     "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
     "jsonwebtoken": "^8.3.0",
     "md5": "^2.2.1",
-    "mongoose": "^5.2.6"
+    "mongoose": "^5.2.6",
+    "vue-apollo": "^3.0.0"
   },
   "devDependencies": {
     "concurrently": "^3.6.0",
