--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.4.4",
     "core-js": "^3.3.2",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.24.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
