--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "core-js": "^3.3.2",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "roboto-fontface": "*",
