--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "apollo-boost": "^0.4.4",
     "core-js": "^3.3.2",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
@@ -16,6 +17,7 @@
     "moment": "^2.24.0",
     "roboto-fontface": "*",
     "vue": "^2.6.10",
+    "vue-apollo": "^3.0.0",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
